--- a/vocabApp/src/main/resources/application.properties
+++ b/vocabApp/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://Ltapia:armando2004@vocabapp.efzcehz.mongodb.net/vocab-vault?retryWrites=true&w=majority&appName=vocabApp
+spring.data.mongodb.uri=mongodb+srv://Ltapia:3oUNtSoQbG72bq7V@vocabapp.efzcehz.mongodb.net/vocab-vault?retryWrites=true&w=majority&appName=vocabApp
 spring.application.name=VocabApp-Backend
 server.port=8080
